# idmanager

./: .gitignore
IdManager/: .gitignore  CMakeLists.txt  IdManager.cpp  IdManager.h  README  SequenceId.cpp  main.cpp
IdManager/src/: CMakeLists.txt  IId.h  main.cpp
IdManager/src/include/: SequenceId.h
IdManager/src/source/: SequenceId.cpp
IdManager/test/: CMakeLists.txt  main.cpp
IdManager/test/include/: doctest.h
IdManager/test/source/: test.cpp
